applications/observability/base/resources/jaeger/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-jaeger
  namespace: observability
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: istio-gateway
      namespace: istio-system
      sectionName: https-jaeger
  hostnames:
    - jaeger.svc.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: jaeger-collector
          port: 16686
          weight: 1
